try to integrated Tufte layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,9 @@
     <link rel="stylesheet" href="assets/css/entypo.css" media="all"/>
     <link rel="stylesheet" href="assets/css/font-awesome.min.css"  type="text/css"/>
 
-    <link rel="stylesheet" type="text/css" href="stylesheets/i.css" media="screen"/>
+    <!-- <link rel="stylesheet" type="text/css" href="stylesheets/i.css" media="screen"/> -->
+
+    <link rel="stylesheet" type="text/css" href="stylesheets/tufte.css" media="screen"/>
 
     <!-- Javascript -->
     <script async="async" defer="defer" src="https://hypothes.is/embed.js"></script>
