--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,14 +18,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
     <!-- Type -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Crimson+Text:400,400italic,700,700italic" type='text/css' />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" type='text/css'/>
-    <link rel="stylesheet" href="assets/css/entypo.css" media="all"/>
-    <link rel="stylesheet" href="assets/css/font-awesome.min.css"  type="text/css"/>
+    <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Crimson+Text:400,400italic,700,700italic" type='text/css' /> -->
+    <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" type='text/css'/> -->
+    <!-- <link rel="stylesheet" href="assets/css/entypo.css" media="all"/> -->
+
+    <!-- <link rel="stylesheet" href="css/font-awesome.min.css"  type="text/css"/> -->
 
     <!-- <link rel="stylesheet" type="text/css" href="stylesheets/i.css" media="screen"/> -->
 
-    <link rel="stylesheet" type="text/css" href="stylesheets/tufte.css" media="screen"/>
+    <link rel="stylesheet" type="text/css" href="css/tufte.css" media="screen"/>
 
     <!-- Javascript -->
     <script async="async" defer="defer" src="https://hypothes.is/embed.js"></script>
@@ -86,7 +87,7 @@
       </div>
 
       <div id="default-footer">
-      <span style="font-size: 150%;float:left">
+      <span style="font-size: 150%;float:left;margin-top:1cm;">
       {% if page.url == "/foreword.html"%}
       Next: <a href="./preface.html">preface »</a> 
       {% elsif page.url == "/preface.html" %}
@@ -179,7 +180,7 @@
       {% endif %}
       </span> <!-- End of breadcrumb thingy -->
 
-      <span style="float:right;margin-right:30px;line-height:31px;vertical-align:-80%;">Public Domain (<a href="https://creativecommons.org/publicdomain/zero/1.0/">CC-Zero</a>), 2012-2020&nbsp;<span style="vertical-align:0%;"><img width="10" src="./images/Cc.logo.circle.svg.png" alt="Logo of Creative Commons"/> <img width="10" src="./images/56px-Cc-zero.svg.png" alt="Logo of the Creative Commons Zero Public Domain Dedication license"/></span>
+      <span style="float:right;margin-right:100px;margin-top:1cm;line-height:31px;vertical-align:-80%;">Public Domain (<a href="https://creativecommons.org/publicdomain/zero/1.0/">CC-Zero</a>), 2012-2020&nbsp;<span style="vertical-align:0%;"><img width="10" src="./images/Cc.logo.circle.svg.png" alt="Logo of Creative Commons"/> <img width="10" src="./images/56px-Cc-zero.svg.png" alt="Logo of the Creative Commons Zero Public Domain Dedication license"/></span>
       </span> <!-- End of rights statement -->
       </div> <!-- End of footer -->
     </div>
