--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -78,7 +78,7 @@
       {% endif %}
 
 <p>
-  <a href="http://peeragogy.org">« Back to Peeragogy.org</a>
+  <a href="/">« Back to Peeragogy.org</a>
 </p>
 
       <!-- https://github.com/allejo/jekyll-anchor-headings -->
