--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,8 @@
 
     <!-- <link rel="stylesheet" type="text/css" href="stylesheets/i.css" media="screen"/> -->
 
-    <link rel="stylesheet" type="text/css" href="css/tufte.css" media="screen"/>
+    <link rel="stylesheet" type="text/css" href="_site/css/tufte.css" media="screen"/>
+    <!-- <link rel="stylesheet" type="text/css" href="css/tufte.css" media="screen"/> -->
 
     <!-- Javascript -->
     <script async="async" defer="defer" src="https://hypothes.is/embed.js"></script>
