--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,11 +21,8 @@
     <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Crimson+Text:400,400italic,700,700italic" type='text/css' /> -->
     <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" type='text/css'/> -->
     <!-- <link rel="stylesheet" href="assets/css/entypo.css" media="all"/> -->
-
     <!-- <link rel="stylesheet" href="css/font-awesome.min.css"  type="text/css"/> -->
-
     <!-- <link rel="stylesheet" type="text/css" href="stylesheets/i.css" media="screen"/> -->
-
     <link rel="stylesheet" type="text/css" href="_site/css/tufte.css" media="screen"/>
     <!-- <link rel="stylesheet" type="text/css" href="css/tufte.css" media="screen"/> -->
 
@@ -79,7 +76,7 @@
       {% endif %}
 
 <p>
-  <a href="/">« Back to Peeragogy.org</a>
+  <a href="{{ site.baseurl }}">« Back to Peeragogy.org</a>
 </p>
 
       <!-- https://github.com/allejo/jekyll-anchor-headings -->
